testsuite/tests/backpack/should_compile/bkp11.stderr
[1 of 2] Processing p
unit p(hole:H, hole:H2)
  [1 of 3] Compiling H[sig]           ( p/H.hsig, nothing )
  [2 of 3] Compiling H2[sig]          ( p/H2.hsig, nothing )
  [3 of 3] Compiling A                ( p/A.hs, nothing )
[2 of 2] Processing q

bkp11.bkp:11:1: error:
    Duplicate dest (tell us if you need this to be supported) H
